<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RatingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        tools:context=".RatingActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/textView_crud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editText_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/enter_picture_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView" />

        <EditText
            android:id="@+id/editText_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:hint="@string/enter_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/editText_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <EditText
            android:id="@+id/editText_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:hint="@string/optional"
            app:layout_constraintEnd_toEndOf="@+id/editText_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_rating" />


        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_add_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_comment" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_update_rating"
            app:layout_constraintEnd_toEndOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/btn_add"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_delete_rating"
            app:layout_constraintEnd_toEndOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/btn_update"/>

        <Button
            android:id="@+id/btn_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_view_data"
            app:layout_constraintEnd_toEndOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>